--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "dev": "vite"
+    "dev": "vite",
+    "deploy": "npm run build && git add dist -f && git commit -m 'Deploy' && git push origin `git subtree split --prefix dist HEAD`:gh-pages --force"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
